# rpg-game-backend

./: .env  .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  seed.sql
.github/workflows/: ci.yml
migrations/2023-06-04-120701_create_characters/: up.sql
migrations/2023-06-04-120701_create_heroes/: up.sql
src/: diesel_helpers.rs  main.rs  schema.rs
src/characters/: get.rs  mod.rs
src/heroes/: get.rs  mod.rs
