[package]
name = "rpg-game-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "chrono"] }
dotenvy = "0.15"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
